clusters/talos-robbinsdale/apps/media/app/transmission-tv/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission-tv
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "Transmission TV"
    item.homer.rajsingh.info/subtitle: "TV Shows Downloader"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/transmission.svg"
    item.homer.rajsingh.info/keywords: "torrent, tv, download"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "transmission-tv.${COMMON_DOMAIN}"
    - "transmission-tv.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: transmission-tv
          port: 9091
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
